--- a/scss/ingrid.scss
+++ b/scss/ingrid.scss
@@ -17,7 +17,7 @@
 // 2. $breakpoints variable should be set to false if you don't need media queries for your layout.
 // 3. $gutters variable can be set to any unit, example: '20px', or '2%' etc. Don't forget that relative units in $gutters argument will be affected when nesting grids.
 
-$breakpoints: (tablet, 45em), (desktop, 65em);
+$breakpoints: (medium, 45em), (large, 65em), (xlarge, 85em);
 $gutters: 2rem;
  
 
